--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DevIntensive2019</string>
+    <string name="app_name">Chat Dev-intensive</string>
 </resources>
